// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuButton should render component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c3 {
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3[data-disabled] {
  pointer-events: none;
}

.c3[data-disabled] *[fill^='#'] {
  fill: #B1B5BB;
}

.c0 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='primary']:focus,
.c0[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c0[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c0[data-appearance~='primary'][data-appearance~='disabled'],
.c0[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary']:focus,
.c0[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary']:focus *[fill^='#'],
.c0[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'][data-appearance~='disabled'],
.c0[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c0[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c0[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost']:focus,
.c0[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost']:focus *[fill^='#'],
.c0[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'][data-appearance~='disabled'],
.c0[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c0[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c0[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white']:focus,
.c0[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white']:focus *[fill^='#'],
.c0[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'][data-appearance~='disabled'],
.c0[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c0[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c0[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c0[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='danger']:focus,
.c0[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c0[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c0[data-appearance~='danger'][data-appearance~='disabled'],
.c0[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c0[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='success']:focus,
.c0[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c0[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c0[data-appearance~='success'][data-appearance~='disabled'],
.c0[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c0[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c0[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  cursor: not-allowed;
}

.c2 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c2 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c2 > *:not(:first-child) {
  margin-left: 8px;
}

.c2 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c1 {
  height: 20px;
}

[data-dimension='s'] .c1 > svg {
  width: 20px;
  height: 20px;
}

<body>
    <div>
      <button
        aria-expanded="false"
        class="c0"
        data-appearance="primary"
        data-dimension="l"
        data-testid="btn"
        type="button"
      >
        <span
          class="c1 c2"
        >
          <span>
            test
          </span>
          <div
            aria-hidden="true"
            class="c3"
          />
        </span>
      </button>
    </div>
  </body>,
  "container": .c3 {
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3[data-disabled] {
  pointer-events: none;
}

.c3[data-disabled] *[fill^='#'] {
  fill: #B1B5BB;
}

.c0 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='primary']:focus,
.c0[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c0[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c0[data-appearance~='primary'][data-appearance~='disabled'],
.c0[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary']:focus,
.c0[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary']:focus *[fill^='#'],
.c0[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'][data-appearance~='disabled'],
.c0[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c0[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c0[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost']:focus,
.c0[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost']:focus *[fill^='#'],
.c0[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'][data-appearance~='disabled'],
.c0[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c0[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c0[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white']:focus,
.c0[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white']:focus *[fill^='#'],
.c0[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'][data-appearance~='disabled'],
.c0[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c0[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c0[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c0[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='danger']:focus,
.c0[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c0[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c0[data-appearance~='danger'][data-appearance~='disabled'],
.c0[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c0[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='success']:focus,
.c0[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c0[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c0[data-appearance~='success'][data-appearance~='disabled'],
.c0[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c0[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c0[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  cursor: not-allowed;
}

.c2 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c2 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c2 > *:not(:first-child) {
  margin-left: 8px;
}

.c2 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c1 {
  height: 20px;
}

[data-dimension='s'] .c1 > svg {
  width: 20px;
  height: 20px;
}

<div>
    <button
      aria-expanded="false"
      class="c0"
      data-appearance="primary"
      data-dimension="l"
      data-testid="btn"
      type="button"
    >
      <span
        class="c1 c2"
      >
        <span>
          test
        </span>
        <div
          aria-hidden="true"
          class="c3"
        />
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MenuButton should render component with loading state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='primary']:focus,
.c0[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c0[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c0[data-appearance~='primary'][data-appearance~='disabled'],
.c0[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary']:focus,
.c0[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary']:focus *[fill^='#'],
.c0[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'][data-appearance~='disabled'],
.c0[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c0[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c0[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost']:focus,
.c0[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost']:focus *[fill^='#'],
.c0[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'][data-appearance~='disabled'],
.c0[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c0[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c0[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white']:focus,
.c0[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white']:focus *[fill^='#'],
.c0[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'][data-appearance~='disabled'],
.c0[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c0[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c0[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c0[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='danger']:focus,
.c0[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c0[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c0[data-appearance~='danger'][data-appearance~='disabled'],
.c0[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c0[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='success']:focus,
.c0[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c0[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c0[data-appearance~='success'][data-appearance~='disabled'],
.c0[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c0[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c0[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  cursor: not-allowed;
}

.c2 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c2 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c2 > *:not(:first-child) {
  margin-left: 8px;
}

.c2 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c1 {
  height: 20px;
}

[data-dimension='s'] .c1 > svg {
  width: 20px;
  height: 20px;
}

.c3 {
  position: relative;
  width: 24px;
  height: 24px;
}

.c3 svg {
  -webkit-animation: cilQsd 1s linear infinite;
  animation: cilQsd 1s linear infinite;
}

.c3 svg path {
  fill: #0062FF;
}

<body>
    <div>
      <button
        aria-expanded="false"
        class="c0"
        data-appearance="primary"
        data-dimension="l"
        data-testid="btn"
        disabled=""
        type="button"
      >
        <span
          class="c1 c2"
        >
          <div
            aria-live="assertive"
            class="c3"
            role="alert"
          >
            <div />
          </div>
        </span>
      </button>
    </div>
  </body>,
  "container": .c0 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='primary']:focus,
.c0[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c0[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c0[data-appearance~='primary'][data-appearance~='disabled'],
.c0[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary']:focus,
.c0[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary']:focus *[fill^='#'],
.c0[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'][data-appearance~='disabled'],
.c0[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c0[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c0[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost']:focus,
.c0[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost']:focus *[fill^='#'],
.c0[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'][data-appearance~='disabled'],
.c0[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c0[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c0[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white']:focus,
.c0[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white']:focus *[fill^='#'],
.c0[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'][data-appearance~='disabled'],
.c0[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c0[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c0[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c0[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='danger']:focus,
.c0[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c0[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c0[data-appearance~='danger'][data-appearance~='disabled'],
.c0[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c0[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='success']:focus,
.c0[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c0[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c0[data-appearance~='success'][data-appearance~='disabled'],
.c0[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c0[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c0[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  cursor: not-allowed;
}

.c2 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c2 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c2 > *:not(:first-child) {
  margin-left: 8px;
}

.c2 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c1 {
  height: 20px;
}

[data-dimension='s'] .c1 > svg {
  width: 20px;
  height: 20px;
}

.c3 {
  position: relative;
  width: 24px;
  height: 24px;
}

.c3 svg {
  -webkit-animation: cilQsd 1s linear infinite;
  animation: cilQsd 1s linear infinite;
}

.c3 svg path {
  fill: #0062FF;
}

<div>
    <button
      aria-expanded="false"
      class="c0"
      data-appearance="primary"
      data-dimension="l"
      data-testid="btn"
      disabled=""
      type="button"
    >
      <span
        class="c1 c2"
      >
        <div
          aria-live="assertive"
          class="c3"
          role="alert"
        >
          <div />
        </div>
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`MenuButton should render component with skeleton state 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c3 {
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3[data-disabled] {
  pointer-events: none;
}

.c3[data-disabled] *[fill^='#'] {
  fill: #B1B5BB;
}

.c0 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='primary']:focus,
.c0[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c0[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c0[data-appearance~='primary'][data-appearance~='disabled'],
.c0[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary']:focus,
.c0[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary']:focus *[fill^='#'],
.c0[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'][data-appearance~='disabled'],
.c0[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c0[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c0[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost']:focus,
.c0[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost']:focus *[fill^='#'],
.c0[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'][data-appearance~='disabled'],
.c0[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c0[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c0[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white']:focus,
.c0[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white']:focus *[fill^='#'],
.c0[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'][data-appearance~='disabled'],
.c0[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c0[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c0[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c0[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='danger']:focus,
.c0[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c0[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c0[data-appearance~='danger'][data-appearance~='disabled'],
.c0[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c0[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='success']:focus,
.c0[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c0[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c0[data-appearance~='success'][data-appearance~='disabled'],
.c0[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c0[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c0[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  cursor: not-allowed;
}

.c2 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c2 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c2 > *:not(:first-child) {
  margin-left: 8px;
}

.c2 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c1 {
  height: 20px;
}

[data-dimension='s'] .c1 > svg {
  width: 20px;
  height: 20px;
}

<body>
    <div>
      <button
        aria-expanded="false"
        class="c0"
        data-appearance="primary"
        data-dimension="l"
        data-testid="btn"
        disabled=""
        type="button"
      >
        <span
          class="c1 c2"
        >
          <span>
            test
          </span>
          <div
            aria-hidden="true"
            class="c3"
          />
        </span>
      </button>
    </div>
  </body>,
  "container": .c3 {
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  -webkit-transition: transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c3 *[fill^='#'] {
  fill: #FFFFFF;
}

.c3[data-disabled] {
  pointer-events: none;
}

.c3[data-disabled] *[fill^='#'] {
  fill: #B1B5BB;
}

.c0 {
  box-sizing: border-box;
  display: inline-block;
  border: none;
  border-radius: 4px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  vertical-align: center;
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0[data-appearance~='primary'] {
  background-color: #0062FF;
  color: #FFFFFF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='primary'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='primary']:focus,
.c0[data-appearance~='primary']:hover {
  background-color: #0046E2;
  border-color: #0046E2;
}

.c0[data-appearance~='primary']:active {
  background-color: #0132B0;
  border-color: #0132B0;
}

.c0[data-appearance~='primary'][data-appearance~='disabled'],
.c0[data-appearance~='primary']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='secondary'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid #0062FF;
}

.c0[data-appearance~='secondary'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary']:focus,
.c0[data-appearance~='secondary']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary']:focus *[fill^='#'],
.c0[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: #0062FF;
}

.c0[data-appearance~='secondary']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='secondary'][data-appearance~='disabled'],
.c0[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: #B1B5BB;
}

.c0[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='ghost'] {
  background-color: transparent;
  color: #0062FF;
  border: 1px solid transparent;
}

.c0[data-appearance~='ghost'] *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost']:focus,
.c0[data-appearance~='ghost']:hover {
  background-color: #0000000D;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost']:focus *[fill^='#'],
.c0[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost']:active {
  background-color: #0000001F;
  color: #0062FF;
  border-color: transparent;
}

.c0[data-appearance~='ghost']:active *[fill^='#'] {
  fill: #0062FF;
}

.c0[data-appearance~='ghost'][data-appearance~='disabled'],
.c0[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: #B1B5BB;
  border-color: transparent;
}

.c0[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='white'] {
  background-color: transparent;
  color: #FFFFFF;
  border: 1px solid #FFFFFF;
}

.c0[data-appearance~='white'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white']:focus,
.c0[data-appearance~='white']:hover {
  background-color: #FFFFFF0F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white']:focus *[fill^='#'],
.c0[data-appearance~='white']:hover *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white']:active {
  background-color: #FFFFFF1F;
  color: #FFFFFF;
  border-color: #FFFFFF;
}

.c0[data-appearance~='white']:active *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='white'][data-appearance~='disabled'],
.c0[data-appearance~='white']:disabled {
  border-color: #4E5158;
  color: #4E5158;
}

.c0[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='white']:disabled *[fill^='#'] {
  fill: #4E5158;
}

.c0[data-appearance~='danger'] {
  background-color: #D92020;
  color: #FFFFFF;
  border: 1px solid #D92020;
}

.c0[data-appearance~='danger'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='danger']:focus,
.c0[data-appearance~='danger']:hover {
  background-color: #BA1717;
  border-color: #BA1717;
}

.c0[data-appearance~='danger']:active {
  background-color: #981111;
  border-color: #981111;
}

.c0[data-appearance~='danger'][data-appearance~='disabled'],
.c0[data-appearance~='danger']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-appearance~='success'] {
  background-color: #1BA049;
  color: #FFFFFF;
  border: 1px solid #1BA049;
}

.c0[data-appearance~='success'] *[fill^='#'] {
  fill: #FFFFFF;
}

.c0[data-appearance~='success']:focus,
.c0[data-appearance~='success']:hover {
  background-color: #128238;
  border-color: #128238;
}

.c0[data-appearance~='success']:active {
  background-color: #0B682A;
  border-color: #0B682A;
}

.c0[data-appearance~='success'][data-appearance~='disabled'],
.c0[data-appearance~='success']:disabled {
  background-color: #E5E7EB;
  color: #B1B5BB;
  border-color: #E5E7EB;
}

.c0[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='success']:disabled *[fill^='#'] {
  fill: #B1B5BB;
}

.c0[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 30px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0[data-dimension='l'] {
  height: 48px;
  padding: 0 22px;
}

.c0[data-dimension='m'] {
  height: 40px;
  padding: 0 18px;
}

.c0[data-dimension='s'] {
  height: 32px;
  padding: 0 14px;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c0:hover {
  cursor: pointer;
}

.c0:disabled {
  cursor: not-allowed;
}

.c2 {
  vertical-align: top;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow: hidden;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c2 > * {
  display: inline-block;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c2 > *:not(:first-child) {
  margin-left: 8px;
}

.c2 > svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c1 {
  height: 20px;
}

[data-dimension='s'] .c1 > svg {
  width: 20px;
  height: 20px;
}

<div>
    <button
      aria-expanded="false"
      class="c0"
      data-appearance="primary"
      data-dimension="l"
      data-testid="btn"
      disabled=""
      type="button"
    >
      <span
        class="c1 c2"
      >
        <span>
          test
        </span>
        <div
          aria-hidden="true"
          class="c3"
        />
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
